--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
 <body class="background">
 
-    <h2 class="text-center textcol my-5">Search From Book Archieve</h2>
+    <h2 class="text-center textcol my-5">Search From Book Archive</h2>
     <div class="input-group mb-3 w-50 mx-auto">
-        <input id="search-field" type="text" class="form-control" placeholder="Search the food you want"
+        <input id="search-field" type="text" class="form-control" placeholder="Search book here"
             aria-label="Recipient's username" aria-describedby="button-addon2">
-        <button onclick="searchFood()" class="btn btn-outline-dark" type="button"
-            id="button-search">Search</button>
+        <button onclick="searchFood()" class="btn btn-outline-secondary" type="button"
+            id="button-search text-white">Search</button>
     </div>
 
 
