--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
     <div class="input-group mb-3 w-50 mx-auto">
         <input id="search-field" type="text" class="form-control" placeholder="Search book here"
             aria-label="Recipient's username" aria-describedby="button-addon2">
-        <button onclick="searchFood()" class="btn btn-outline-secondary" type="button"
+        <button onclick="searchFood()"  class="btn btn-outline-secondary" type="button"
             id="button-search text-white">Search</button>
-    </div>
+    </div  >
+     <div id="error">
+         
+     </div>
 
 
     </div>
