--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meal</title>
+    <title>Book Archive</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
@@ -17,7 +17,7 @@
     <div class="input-group mb-3 w-50 mx-auto">
         <input id="search-field" type="text" class="form-control" placeholder="Search book here"
             aria-label="Recipient's username" aria-describedby="button-addon2">
-        <button onclick="searchFood()"  class="btn btn-outline-secondary" type="button"
+        <button onclick="searchBook()"  class="btn btn-outline-secondary" type="button"
             id="button-search text-white">Search</button>
     </div  >
      <div id="error">
